Update About Page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
         <div class="main-content">
 
         {{>header}}
+        <p>This site was created by Khalid Khira. It uses data from mapbox.com and weatherstack api</p>
         <img class="portrait" src="  /images/me.png" alt="">
         </div>
         
